Sun Nov  9 13:41:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tao/IORInterceptor/Makefile.bor:
	  Added valuetype lib to lin with

Sat Nov  8 23:58:14 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/File_IO/client.cpp
	* tests/IDL_Test/main.cpp
	* tests/MProfile/client.cpp:
	* tests/MT_BiDir/Sender_i.cpp:
	* tests/Multiple_Inheritance/client.cpp
	* tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/Server_Task.cpp:
	* tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/test_i.cpp:
	* tests/Two_Objects/server.cpp:
	* tao/corbafwd.h:
	* utils/catior/catior.cpp:
	* utils/catior/catior.mpc:

	  Fixed fuzz errors.

Sun Nov  9 05:53:59 UTC 2003  Don Hinton  <dhinton@dresystems.com>

	* tao/TypeCodeFactory/TypeCodeFactoryC.cpp:
	* tao/TypeCodeFactory/TypeCodeFactoryC.h:
          Fixed typo.

Sat Nov  8 23:36:46 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/ESF/ESF_Proxy_Collection.h:
	* orbsvcs/orbsvcs/Notify/Event_Map_Entry_T.h:

	  #included "tao/ORB_Constants.h" and "ace/CORBA_macros.h"

Sat Nov  8 23:19:13 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/examples/Security/Send_File/Makefile:

	  Updated dependencies.

	* orbsvcs/orbsvcs/CosEvent/CEC_TypedEvent.h:
	* orbsvcs/orbsvcs/CosEvent/CEC_TypedEventChannel.h:

	  #included tao/NVList.h

Sat Nov  8 22:31:01 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/examples/RtEC/Schedule/Makefile:

	  Do not build if RTOLDEvent is not built.

Sat Nov  8 22:23:55 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* performance-tests/Latency/Deferred/Makefile:
	* orbsvcs/tests/InterfaceRepo/Application_Test/Makefile:

	  Fixed the Makefiles so that these don't build when
	  corba_messaging is turned off.

Sat Nov  8 22:19:30 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/TypeCodeFactory/TypeCodeFactoryC.cpp:
	* tao/TypeCodeFactory/TypeCodeFactoryC.h: